--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
   </head>
 
   <body>
-
+    <header>
+      <nav>
+        <li><a href="#">logo</a></li>
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Mac</a></li>
+        <li><a href="#">iPod</a></li>
+        <li><a href="#">iPhone</a></li>
+        <li><a href="#">iPad</a></li>
+        <li><a href="#">iTunes</a></li>
+        <li><a href="#">Support</a></li>
+        <li><input type="text"></li>
+      </nav>
+      <h1></h1>
+      <h2></h2>
+      <h3></h3>
+    </header>
+    <main>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+    </main>
+    <footer>
+      <div class="footer-content-wrapper">
+        <div class="footer-content-left"></div>
+        <div class="footer-content-right"></div>
+      </div>
+      <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of UsePrivacy Policy</p>
+    </footer>
   </body>
 
 </html>
