--- a/index.html
+++ b/index.html
@@ -5,39 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Apple</title>
     <link rel="stylesheet" href="index.css">
   </head>
 
   <body>
     <header>
+
       <nav>
-        <li><a href="#">logo</a></li>
-        <li><a href="#">Store</a></li>
-        <li><a href="#">Mac</a></li>
-        <li><a href="#">iPod</a></li>
-        <li><a href="#">iPhone</a></li>
-        <li><a href="#">iPad</a></li>
-        <li><a href="#">iTunes</a></li>
-        <li><a href="#">Support</a></li>
-        <li><input type="text"></li>
+        <ul>
+          <li><a class="logo" href="#"></a></li>
+          <li><a href="#">Store</a></li>
+          <li><a href="#">Mac</a></li>
+          <li><a href="#">iPod</a></li>
+          <li><a href="#">iPhone</a></li>
+          <li><a href="#">iPad</a></li>
+          <li><a href="#">iTunes</a></li>
+          <li><a href="#">Support</a></li>
+          <li><input type="text" class="search"></li>
+        </ul>
       </nav>
       <h1></h1>
       <h2></h2>
       <h3></h3>
     </header>
     <main>
-      <li><a href=""><img src="" alt=""></a></li>
-      <li><a href=""><img src="" alt=""></a></li>
-      <li><a href=""><img src="" alt=""></a></li>
-      <li><a href=""><img src="" alt=""></a></li>
+      <ul class="bottom-images">
+        <li><a href=""><img src="images/1.png" alt=""></a></li>
+        <li><a href=""><img src="images/2.png" alt=""></a></li>
+        <li><a href=""><img src="images/3.png" alt=""></a></li>
+        <li><a href=""><img src="images/4.png" alt=""></a></li>
+      </ul>
     </main>
     <footer>
       <div class="footer-content-wrapper">
-        <div class="footer-content-left"></div>
-        <div class="footer-content-right"></div>
+        <div class="footer-content-left">
+          <span>Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail
+              Store</a>, or find a
+            <a href="#">reseller</a>.</span>
+        </div>
+        <div class="footer-content-right">
+          <ul>
+            <li><a href="#">Site Map</a></li>
+            <li><a href="#">Hot News</a></li>
+            <li><a href="#">RSS Feeds</a></li>
+            <li><a href="#">Media Info</a></li>
+            <li><a href="#">Environment</a></li>
+            <li><a href="#">Opportunities</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+
+          </ul>
+        </div>
+        <p class="copy">Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a
+            href="#">Privacy Policy</a>
+        </p>
       </div>
-      <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of UsePrivacy Policy</p>
+
     </footer>
   </body>
 
