Add styles and layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <nav>
         <ul>
-          <li><a class="logo" href="#"></a></li>
+          <li class="logo"><a href="#"></a></li>
           <li><a href="#">Store</a></li>
           <li><a href="#">Mac</a></li>
           <li><a href="#">iPod</a></li>
@@ -26,16 +26,18 @@
           <li><input type="text" class="search"></li>
         </ul>
       </nav>
-      <h1></h1>
-      <h2></h2>
-      <h3></h3>
+      <div class="header-content">
+        <h1><a class="title" href="#">first title</a></h1>
+        <h2 class="sub"><a href="#">second title</a></h2>
+        <h3 class="link"><a href="#">third title</a></h3>
+      </div>
     </header>
     <main>
       <ul class="bottom-images">
-        <li><a href=""><img src="images/1.png" alt=""></a></li>
-        <li><a href=""><img src="images/2.png" alt=""></a></li>
-        <li><a href=""><img src="images/3.png" alt=""></a></li>
-        <li><a href=""><img src="images/4.png" alt=""></a></li>
+        <li><a href=""><img src="images/1.png" alt="thumbnail1"></a></li>
+        <li><a href=""><img src="images/2.png" alt="thumbnail2"></a></li>
+        <li><a href=""><img src="images/3.png" alt="thumbnail3"></a></li>
+        <li><a href=""><img src="images/4.png" alt="thumbnail4"></a></li>
       </ul>
     </main>
     <footer>
@@ -55,6 +57,7 @@
             <li><a href="#">Opportunities</a></li>
             <li><a href="#">Contact Us</a></li>
             <li><a href="#">Contact Us</a></li>
+            <li><img class="flag" src="images/flag.png" alt=""></li>
 
           </ul>
         </div>
