--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="header-content">
         <h1><a class="title" href="#">first title</a></h1>
         <h2 class="sub"><a href="#">second title</a></h2>
-        <h3 class="link"><a href="#">third title</a></h3>
+        <span class="link"><a href="#"><img class="img-title" src="images/link.png" alt=""></a></span>
       </div>
     </header>
     <main>
