fix image width

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </header>
     <main>
       <ul class="bottom-images">
-        <li><a href=""><img src="images/1.png" alt="thumbnail1"></a></li>
-        <li><a href=""><img src="images/2.png" alt="thumbnail2"></a></li>
-        <li><a href=""><img src="images/3.png" alt="thumbnail3"></a></li>
-        <li><a href=""><img src="images/4.png" alt="thumbnail4"></a></li>
+        <li class="img-thumbnail"><a href=""><img src="images/1.png" alt="thumbnail1"></a></li>
+        <li class="img-thumbnail"><a href=""><img src="images/2.png" alt="thumbnail2"></a></li>
+        <li class="img-thumbnail"><a href=""><img src="images/3.png" alt="thumbnail3"></a></li>
+        <li class="img-thumbnail"><a href=""><img src="images/4.png" alt="thumbnail4"></a></li>
       </ul>
     </main>
     <footer>
